improve some methods